Quorum3/Library/Tests/TypeChecker/Pass/IntegerGetText.quorum
class Main
    action Main
        Integer t 
        t:SetValue(5)
        integer p = 5

        output t:GetText()
        output p:GetText()
    end
end