Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextIntegerWrapped.quorum
class main
    action Main
        integer i = 5
        text t = i
    end
end